# libb64-rs

./: .gitignore  BENCHMARK.md  BENCHMARKS.md  Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml
b64/: Cargo.toml
b64/benches/: b64_bench.rs
b64/src/: async_decode.rs  async_encode.rs  decode.rs  encode.rs  lib.rs  parallel.rs
b64/tests/: async_tests.rs  decode_tests.rs  encode_tests.rs  parallel_tests.rs
base64-cli/: Cargo.toml
base64-cli/src/: main.rs
base64-cli/tests/: cli_tests.rs
examples/: Cargo.toml
