[package]
name = "b64"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
base64-simd = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }

[dev-dependencies]
criterion = "0.5"
memmap2 = "0.9"
rand = "0.8"

[[bench]]
name = "b64_bench"
harness = false
